Fix contraste letra y fondo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 
    body {
       background-color: #080808;
+      color: white;
       font-family: 'Montserrat', sans-serif;
       font-size: 1rem;
       letter-spacing: 0.05em;
